# vision_cortex

./: .dockerignore  .env.example  .gitignore  AUTONOMOUS_REPAIR_REPORT.md  AUTO_BUILDER_COMPLETE_GUIDE.md  COMPLETE_DOCUMENTATION_INDEX.md  COMPLETE_ROADMAP_A_TO_Z.md  COMPLETE_WORKFLOW_GUIDE.md  DOC_SYSTEM_README.md  Dockerfile  FAANG_ENHANCEMENTS_COMPLETE.md  FAANG_READINESS_SUMMARY.md  FRONTEND_HANDOFF.md  FRONTEND_HANDOFF_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  INDEXING_SYSTEM_DOCUMENTATION.md  INFRASTRUCTURE_READY.md  INTELLIGENCE_HUB_INTEGRATION.md  LICENSE  MASTER_INDEX.md  QUICK_REFERENCE_GUIDE.md  README.md  SCAFFOLDING_COMPLETE.md  SECURITY_CHECKLIST.md  SYSTEM_DEPLOYMENT_SUMMARY.md  SYSTEM_INDEX.md  SYSTEM_REQUIREMENTS.yaml  TAXONOMY_INDEX_COMPLETE_GUIDE.md  VALIDATOR_CHECKLIST.md  VALIDATOR_GUIDE.md  VALIDATOR_IMPLEMENTATION.md  VALIDATOR_QUICKREF.md  VISION_CORTEX_IMPLEMENTATION_GUIDE.md  VISION_CORTEX_SYSTEM_COMPLETE.md  WORKFLOW_AND_AUTOCOMMIT_GUIDE.md  auto-repair-agent.ps1  auto_code_validator_agent.py  auto_folder_check_correct.py  auto_folder_check_correct_bg.py  complete-agent-system.ts  (+22 more)
contracts/: vision-cortex.quantum-intelligence.v1.md  vision-cortex.real-estate.v1.md
doc_system/: SOP_SYSTEM_GUIDE.md  SOP_SYSTEM_SUMMARY.md  __init__.py  agent_config_loader.py  auto_git_agent.py  auto_sop_agent.py  code_validation_agent.py  doc_create.py  doc_evolve.py  doc_index.py  doc_ingest.py  doc_orchestrator.py  doc_sync.py  doc_transform.py  enhanced_unified_orchestrator.py  interactive_todo.py  sop_validator_refiner.py  unified_orchestrator.py  (+2 more)
(+103 files in other folders)
